--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "share-localstorage",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "share localstorage",
-  "main": "index.js",
+  "main": "dist/main.es.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/joehecn/share-localstorage/issues"
   },
-  "homepage": "https://github.com/joehecn/share-localstorage#readme"
+  "homepage": "https://github.com/joehecn/share-localstorage#readme",
+  "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "rollup": "^2.56.3",
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5"
+  }
 }
