--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "share-localstorage",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "share localstorage",
   "main": "dist/main.es.js",
   "scripts": {
+    "test": "jest",
     "build": "rollup -c"
   },
   "repository": {
@@ -23,7 +24,16 @@
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.2.5",
+    "@types/expect-puppeteer": "^4.4.6",
+    "@types/jest": "^27.0.1",
+    "@types/jest-environment-puppeteer": "^4.4.1",
+    "@types/puppeteer": "^5.4.4",
+    "expect-puppeteer": "^5.0.4",
+    "jest": "^27.0.6",
+    "jest-puppeteer": "^5.0.4",
+    "puppeteer": "^10.2.0",
     "rollup": "^2.56.3",
+    "ts-jest": "^27.0.5",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   }
